--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -5,224 +5,121 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="15"
-    android:background="@drawable/login_bg">
-
-    <LinearLayout
-
+  <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/rootLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4.5"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-
+        android:layout_height="match_parent"
+        android:background="@drawable/login_bg"
+        android:padding="@dimen/_40sdp"
         >
+
         <com.app.l_pesa.common.CommonTextRegular
-            android:layout_width="match_parent"
+            android:id="@+id/textView27"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_100sdp"
+            android:fontFamily="@font/montserrat"
             android:text="@string/thank_you"
-            android:gravity="center"
             android:textColor="@color/colorYellow"
-            android:shadowColor="#000000"
-            android:shadowDx="2.7"
-            android:shadowDy="2.7"
-            android:shadowRadius="1"
-            android:textSize="@dimen/_15sdp"/>
+            android:textSize="@dimen/_17sdp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView28"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <com.app.l_pesa.common.CommonTextRegular
-            android:layout_width="match_parent"
+            android:id="@+id/textView28"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/_10sdp"
+            android:fontFamily="@font/montserrat"
             android:text="@string/upload_selfie_picture"
-            android:gravity="center"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/_12sdp"/>
+            android:textColor="@color/colorSemiWhite"
+            app:layout_constraintBottom_toTopOf="@+id/imgProfilePhoto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView27" />
 
+        <com.app.l_pesa.common.CircularImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imgProfilePhoto"
+            android:layout_width="@dimen/_75sdp"
+            android:layout_height="@dimen/_75sdp"
+            android:layout_marginTop="@dimen/_60sdp"
+            android:src="@drawable/ic_profile"
+            app:civ_border_color="@color/screenBackground"
+            app:civ_border_width="@dimen/_1sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView28" />
 
-    </LinearLayout>
+        <com.app.l_pesa.common.CircularImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imgEditPhoto"
+            android:layout_width="@dimen/_23sdp"
+            android:layout_height="@dimen/_23sdp"
+            android:src="@drawable/ic_profile"
+            app:layout_constraintBottom_toBottomOf="@+id/imgProfilePhoto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgProfilePhoto" />
 
-    <LinearLayout
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:gravity="center"
-        >
-
-        <FrameLayout
+        <com.app.l_pesa.common.CommonEditTextRegular
+            android:id="@+id/etName"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            >
-
-            <com.app.l_pesa.common.CircularImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/imgProfilePhoto"
-                android:layout_width="@dimen/_75sdp"
-                android:layout_height="@dimen/_75sdp"
-                android:src="@drawable/ic_profile"
-                app:civ_border_color="@color/screenBackground"
-                app:civ_border_width="@dimen/_1sdp"
-                android:layout_gravity="center"
-
-                />
-
-            <com.app.l_pesa.common.CircularImageView
-                android:id="@+id/imgEditPhoto"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:src="@drawable/ic_cam_icon"
-                android:layout_gravity="bottom|center"
-
-                />
-
-
-        </FrameLayout>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:orientation="vertical"
-
-        />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:gravity="center"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
-        android:background="@drawable/bg_black_view">
-
-
-
-            <com.app.l_pesa.common.CommonEditTextRegular
-                android:id="@+id/etName"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/_7sdp"
-                android:hint="@string/enter_name"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_2sdp"
-                android:background="@android:color/transparent"
-                android:textSize="@dimen/_15sdp"
-                android:layout_margin="@dimen/_5sdp"
-                android:textColor="@color/colorWhite"
-                android:inputType="text|textNoSuggestions"
-                android:textColorHint="@color/colorWhite"
-                android:maxLength="30"
-                android:text=""
-                android:gravity="start|center"
-                android:cursorVisible="true"
-                android:textCursorDrawable="@null"
-                android:focusable="true"
-                android:maxLines="1"
-                android:longClickable="false"
-
-
-                />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".25"
-        android:orientation="vertical"
-
-        />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:gravity="center"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
-        android:background="@drawable/bg_black_view">
-
-
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@drawable/bg_black_view"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_2sdp"
+            android:hint="@string/enter_name"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/colorSemiWhite"
+            android:textColorHint="@color/colorSemiWhite"
+            android:textSize="@dimen/_12sdp"
+            app:layout_constraintBottom_toTopOf="@+id/etOTP"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgEditPhoto" />
 
         <com.app.l_pesa.common.CommonEditTextRegular
             android:id="@+id/etOTP"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/_7sdp"
-            android:hint="@string/enter_otp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:background="@drawable/bg_black_view"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_2sdp"
-            android:background="@android:color/transparent"
-            android:textSize="@dimen/_15sdp"
-            android:layout_margin="@dimen/_5sdp"
-            android:textColor="@color/colorWhite"
-            android:inputType="text|textNoSuggestions"
-            android:textColorHint="@color/colorWhite"
-            android:maxLength="10"
-            android:text=""
-            android:gravity="start|center"
-            android:cursorVisible="true"
-            android:textCursorDrawable="@null"
-            android:focusable="true"
-            android:maxLines="1"
-            android:longClickable="false"
+            android:hint="@string/enter_otp"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/colorSemiWhite"
+            android:textColorHint="@color/colorSemiWhite"
+            android:textSize="@dimen/_12sdp"
+            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etName" />
 
-
-            />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:layout_marginLeft="@dimen/_12sdp"
-        android:layout_marginRight="@dimen/_12sdp"
-
-        >
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txtSubmit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <com.app.l_pesa.common.CustomButtonRegular
+            android:id="@+id/btnSubmit"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginTop="@dimen/_12sdp"
+            android:layout_marginBottom="@dimen/_30sdp"
+            android:background="@drawable/yellow_button"
             android:text="@string/final_step"
-            android:gravity="center"
-            android:textSize="@dimen/_16sdp"
-            android:textColor="@color/colorWhite"
-            android:textAllCaps="true"
-            android:background="@drawable/bg_button_yellow"
+            android:textColor="@color/colorSemiWhite"
             android:textStyle="bold"
-            />
-    </RelativeLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/commonEditTextRegular2" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3.25"
-        android:orientation="vertical"
 
-        />
+    </android.support.constraint.ConstraintLayout>
 
-</LinearLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
 
