--- a/app/src/main/res/layout/activity_wallet_history.xml
+++ b/app/src/main/res/layout/activity_wallet_history.xml
@@ -17,10 +17,38 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextAppearance="@style/Toolbar.TitleText"/>
+            app:titleTextAppearance="@style/Toolbar.TitleText">
+
+        <ImageView
+            android:id="@+id/imgFilter"
+            android:contentDescription="@string/app_name"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_22sdp"
+            android:layout_gravity="end"
+            android:src="@drawable/ic_filter"
+            android:layout_marginEnd="@dimen/_12sdp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:focusable="true"
+
+            />
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_wallet_history" />
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="true"
+        android:background="@android:color/white"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+        <include
+
+            layout="@layout/layout_filter_by_date"/>
+
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
